2007-11-15  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* gitps.c: handle cygwin ps output, add more error checking.
	* README: Document the need to set CYGWIN=tty under cygwin.

2007-10-22  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Relicensed code to GPL version 3,
	  git.texinfo to GFDL 1.2 with no invariant sections,
	  no front cover texts and no back cover texts.
	* Updated to latest gnulib, also import nanosleep.

2007-10-20  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Bumped version to 4.9.2
	* gitps.c,term/gnuitrc.*.in: added RefreshAfterKill variable
	  (Default: ON), to autorefresh after signalling a process.
	* gitps.c: remove bogus code from kill_process().
	* */ChangeLog: added note to look here instead.
	* Renamed texinfo, info, html and spec files to gnuit.
	* Removed unused file 'version'

2007-10-19  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Renamed package to gnuit.
	* Renamed term/gitrc.* to gnuitrc.*

2007-10-03  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Manually expand variables in gitrc.common.IN
	  (sed in Makefile.am), otherwise they get expanded to (eg)
	  $(prefix)/share/doc/gnu-interactive-tools.
	* gitps:
	  + Added SIGSTKFLT to supported signals.
	  + Added numbers as key bindings to select signals.

2007-10-01  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Remove leading dot from system copy of config files.
	* Portability fixes (freebsd, amd64).
	* tilde.[ch] and history.[ch] were not getting included
	  when needed. Autotools weirdness, I suspect gnulib.
	  Moved them back to src/ and now use them unconditionally.

2007-09-30  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* add --enable-debian flag to set defaults
	  for debian (sensible-browser, etc).
	* merged debian manpages (gitps, gitview, gitwipe, etc) upstream.
	* merged Bruce Sass's patches for manipulating .deb files
	* Updated RPM spec file. Warning: untested.
	* Remove CVS $Id$ tags as we are now using git.

2007-09-29  Ian Beckwith  <ianb@nessie.mcc.ac.uk>
