@@ -1,3 +1,7 @@
+2007-11-28  Ian Beckwith  <ianb@nessie.mcc.ac.uk>
+
+	* git.c: Fallback to PAGER if GIT_PAGER is not set.
+
 2007-11-15  Ian Beckwith  <ianb@nessie.mcc.ac.uk>
 
 	* gitps.c: handle cygwin ps output, add more error checking.
